# aurora-sizing

./: PerfClient.tar  README.md  TestData.csv  aj.txt  aurora-postgresql.jks  dependency-reduced-pom.xml  middleware.tar  pg_stat_queries  pom.xml  run.txt  setupclient.sh  setupmw.sh
client-cpp/: CMakeLists.txt  main.cpp  metrics.h  run.sh
client-cpp/client/: client.h  connection.h
client-cpp/client/messages/: attach.h  getbyname.h  lookup.h  message.h  security.h
clientgo/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  spawnClients.sh
clientgo/baseproto/: ObjectService.pb.go  ObjectService_grpc.pb.go  cmd_change_init_data.pb.go  cmd_change_init_data_ext.pb.go  cmd_connect.pb.go  cmd_connect_ext.pb.go  cmd_delete.pb.go  cmd_delete_by_name.pb.go  cmd_get_by_name.pb.go  cmd_get_by_name_ext.pb.go  cmd_get_many_by_name.pb.go  cmd_get_many_by_name_ext.pb.go  cmd_header.pb.go  cmd_idx_get_by_name.pb.go  cmd_index_get_by_name.pb.go  cmd_index_get_by_name_by_limit.pb.go  cmd_index_get_by_name_with_client.pb.go  cmd_index_get_many_by_name.pb.go  cmd_insert.pb.go  cmd_lookup_by_name.pb.go  cmd_lookup_by_type.pb.go  cmd_rename.pb.go  cmd_rename_by_name.pb.go  cmd_trailer.pb.go  cmd_trans_msg_request.pb.go  cmd_trans_msg_response.pb.go  cmd_trans_type.pb.go  cmd_type.pb.go  cmd_update.pb.go  error_type.pb.go  get_type.pb.go  metadata.pb.go  obj_svc.pb.go  obj_svc_grpc.pb.go  response_status.pb.go  trans_msg_response.pb.go  transaction_svc.pb.go  transaction_svc_grpc.pb.go
clientgo/client/: main.go
clientgo/server/: main.go  util.go
clientgo/ssclient/: interface.go  ssclient.go
clientgo/ssclient/clbstream/: client.go
clientgo/ssclient/clgrpc/: client.go  conversions.go  transactor.go
clientgo/ssclient/cltcp/: client.go
clientgo/ssclient/model/: types.go  (+1 more)
data/: Buckets.csv  FinalOutputs.csv  InitialSizes.csv  combine_commands
data/0/: Buckets.csv  InitialSizes.csv
data/1/: Buckets.csv  InitialSizes.csv
data/2/: Buckets.csv  InitialSizes.csv
data/3/: Buckets.csv  InitialSizes.csv
data/4/: Buckets.csv  InitialSizes.csv  InitialSizes.cvs
data/5/: Buckets.csv  InitialSizes.csv
data/6/: Buckets.csv  InitialSizes.csv
data/7/: Buckets.csv  InitialSizes.csv
data/index/: AdvancedIndex.csv  AdvancedIndexBlobSizes.csv  ClassicIndex.csv  Index2Bucket.csv  Index2SingleSizes.csv
middleware-cpp/: CMakeLists.txt  main.cpp  run.sh
middleware-cpp/data/: dump.sql
middleware-cpp/includes/ozo/: connection_pool.h  execute.h  request.h  transaction.h
middleware-cpp/includes/ozo/ext/std/: string.h
middleware-cpp/server/: connection.h  io_context_pool.h  metrics.h  secserv.h
middleware-cpp/server/db/: repository.h
middleware-cpp/server/protocol/: msg_processor.h
middleware-cpp/server/protocol/messages/: attach.h  attach_test.cpp  getbyname.h  message.h  namelookup.h  request.h  security.h
performance-test-artifacts/: continuos-jcmd-threadstack.sh  data-dump  desc.md  pgboncer.ini
performance-test-artifacts/caches/: doc.md
performance-test-artifacts/db-stats/: snapshot_11_23.txt  snapshots.txt
src/pySizeGenerator/: GenPlots.py  GenSizeCsv.py  testBuckets.csv  testInitialSizes.csv
(+170 files in other folders)
